# factors_calculate

./: .gitignore  CLAUDE.md  CMakeLists.txt  cpp_factor_migration_draft.md  cross_section_utils.h  factor.h  factor001.cpp  factor01_031_extract.h  factor01_031_state.h  factor01_031_stream.h  factor032_040_extract.h  factor_calculator_draft.ipynb  factor_collection.h  factor_result.h  main.cpp  trade_vwap_utils.h
docs/: CLAUDE.md  cpp_factor_migration_draft.md  factor01_031_design.md  factor032_040_design.md  factor041_050_design.md  factor053_061_design.md  todo.md  优化思路.md  性能对比_01031_vs_032040.md  整合方案设计稿.md
new_version/: factor.cpp  factor.h  factor_collection.h
